[package]
name = "less_oxide"
version = "0.1.0"
edition = "2021"
authors = ["less-oxide contributors"]
description = "高性能 Rust LESS 编译器，提供 Node.js 绑定"
license = "MIT"
repository = "https://example.com/less-oxide"
readme = "README.md"
keywords = ["less", "css", "compiler", "rust", "napi"]
categories = ["wasm", "compilers", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
node = ["napi", "napi-derive"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }
thiserror = "1"
indexmap = "2"
once_cell = "1"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[[bench]]
name = "perf"
harness = false
